RH-3405 #comment Fix the layout issue on NDI and New Patient when pdf

--- a/grails-app/assets/stylesheets/sass/pages/task/_taskResultPrint.scss
+++ b/grails-app/assets/stylesheets/sass/pages/task/_taskResultPrint.scss
@@ -4,6 +4,13 @@
     margin: 0cm;
 }
 
+#main {
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
+    padding: 20px;
+}
+
 .sticky-header {
     .header {
         height: 40px;
